# Medical-Notes

./: .env  .gitignore  AGENTS.md  EVAL_DECISIONS.md  MANUAL_SCORING_RESULTS.md  PAPER_BRIEF.md  PRESENTATION_GAMMA.md  SYNTHETIC_CLAUDE_METHOD_NOTE.md  doc.md  paper_results.csv  paper_results.md  pyproject.toml  read.md  start.sh  stop.sh
artifacts/icl/: real_pool_icl_examples.jsonl  real_pool_icl_manifest.tsv  real_pool_icl_prompt_block.txt
data/from_chiro/: audio10_fisa.docx  audio1_fisa.docx  audio20_fisa.docx  audio21_fisa.docx  audio22_fisa.docx  audio23_fisa.docx  audio25_fisa.docx  audio26_fisa.docx  audio27_fisa.docx  audio28_fisa.docx  audio29_fisa.docx  audio30_fisa.docx  audio31_fisa.docx  (+4 more)
scripts/: build_chiro_sft_jsonl.py  build_real_icl_examples.py  generate_synthetic_chiro_data.py  generate_synthetic_claude_data.py
src/: chiro_pipeline.ipynb  data_split.py  main.ipynb
src/STT/: .env.example  .gitignore  AGENTS.md  CHANGELOG_PAPER.md  README.md  nodes.md  pyproject.toml
src/STT/src/medical_stt/: __init__.py  cli.py  config.py  pipeline.py  schemas.py
src/STT/src/medical_stt/eval/: __init__.py  loaders.py  metrics.py  normalize.py  runner.py
src/STT/tests/scoring_samples/: audio23_manual.json  audio24_manual.json  audio_11_manual.json  audio_2_manual.json  audio_7_manual.json  results.json
src/STT/tests/scoring_samples/hyp/: audio23.json  audio24.json  audio_11.json  audio_2.json  audio_7.json
synthetic/: coverage_report.tsv  diversity_report.tsv  index.tsv  plan.tsv
tests/: test_data_split.py  test_eval.py  test_real_icl_examples.py
(+2718 files in other folders)
